<resources>

    <string name="app_name">VUpark</string>
    <string name="username_text">Username:</string>
    <string name="username_hint">Type your username</string>
    <string name="password_text">Password:</string>
    <string name="password_hint">Type your password</string>
    <string name="login_text">Login</string>
    <string name="title_activity_maps">Map</string>

    <string name="park_button_text">Park</string>
    <string name="lots_button_text">Parking Lots</string>
    <string name="account_button_text">Account</string>
    <string name="help_text">VU Parking Contact Info.</string>


    <string name="pick_lot_text">Click on a parking lot in the map above.</string>
    <string name="reserve_button_text">Reserve Spot</string>
    <string name="register_button_text">Register Parking Spot</string>

</resources>
