<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="cs4278.vupark.LoginActivity">

    <android.support.v7.widget.Toolbar

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="10pt"
            android:textStyle="bold"
            />
        
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.Toolbar
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/park_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="start"
                android:text="@string/park_button_text" />

            <Button
                android:id="@+id/lots_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="start"
                android:layout_toEndOf="@+id/park_button"
                android:text="@string/lots_button_text" />

            <Button
                android:id="@+id/account_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/lots_button"
                android:text="@string/account_button_text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/account_button"/>

            <ImageButton
                android:id="@+id/help_button"
                android:contentDescription="@string/help_text"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_help_outline_black_24dp" />

        </RelativeLayout>


    </android.support.v7.widget.Toolbar>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        tools:context="cs4278.vupark.MapsActivity"/>

    <android.widget.TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:gravity="center"
        android:text="@string/pick_lot_text"/>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="10"-->
        <!--android:orientation="vertical">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center">-->

            <!--<Button-->
                <!--style="?android:attr/buttonBarButtonStyle"-->
                <!--android:id="@+id/reserve_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:text="@string/reserve_button_text"/>-->

            <!--<Button-->
                <!--style="?android:attr/buttonBarButtonStyle"-->
                <!--android:id="@+id/register_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:text="@string/account_button_text"/>-->

        <!--</android.support.v7.widget.Toolbar>-->

        <!--<ListView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

        <!--</ListView>-->

    <!--</LinearLayout>-->

</LinearLayout>